# Link-Content-Scraper

./: .gitignore  AGENT_README.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  STAGING_SETUP.md  agent_system.py  fly.staging.toml  fly.toml  main.py  pyproject.toml  test_agent.py  test_integration.py  test_title_extraction.py
.beads/: dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.claude/: settings.local.json
.github/workflows/: deploy-staging.yml
docs/bdd/: acceptance-criteria.md
docs/superpowers/plans/: 2026-04-12-test-coverage.md
docs/superpowers/specs/: 2026-04-12-test-coverage-design.md
link_content_scraper/: __init__.py  app.py  auth.py  billing.py  config.py  content.py  filters.py  jobs.py  models.py  progress.py  rate_limit.py  routes.py  scraper.py  usage.py
link_content_scraper/routes/: __init__.py  billing.py  meta.py  scrape.py
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260419000000_billing_schema.sql  20260421000000_pending_keys.sql
templates/: agent.html  billing.html  billing_success.html  index.html
tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_bdd_billing.py  test_bdd_scrape.py  test_billing.py  test_content.py  test_filters.py  test_integration.py  test_jobs.py  test_progress.py  test_rate_limit.py  test_routes.py  test_scraper.py  test_usage.py
tests/features/: billing.feature  scraping.feature
