[project]
name = "link-content-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.39.0",
    "beautifulsoup4>=4.12.3",
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "uvicorn>=0.34.0",
]
